V8 stack dump from slowNightly\memory.js on Windows

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.3.2
    • Affects Version/s: 2.3.1
    • Component/s: JavaScript
    • Environment:
      Windows 64-bit Win2008+
    • Fully Compatible
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Fri Nov 09 15:16:15.682 [conn2] *** unhandled exception (access violation) at 0x000000013F986897, terminating
      Fri Nov 09 15:16:15.682 [conn2] *** access violation was a read from 0x0000000000000000
      Fri Nov 09 15:16:15.682 [conn2] *** stack trace for unhandled exception:
      Fri Nov 09 15:16:16.010 [conn2] mongod.exe    c:\program files (x86)\microsoft visual studio 10.0\vc\include\ostream(771)  std::operator<<<std::char_traits<char> >+0x37
      Fri Nov 09 15:16:16.025 [conn2] mongod.exe    ...\src\mongo\scripting\v8_utils.cpp(61)                                     mongo::toSTLString+0x310
      Fri Nov 09 15:16:16.025 [conn2] mongod.exe    ...\src\mongo\scripting\engine_v8.cpp(831)                                   mongo::V8Scope::invoke+0x60e
      Fri Nov 09 15:16:16.025 [conn2] mongod.exe    ...\src\mongo\scripting\engine.cpp(434)                                      mongo::PooledScope::invoke+0x3e
      Fri Nov 09 15:16:16.025 [conn2] mongod.exe    ...\src\mongo\db\dbeval.cpp(87)                                              mongo::dbEval+0x3d3
      Fri Nov 09 15:16:16.025 [conn2] mongod.exe    ...\src\mongo\db\dbeval.cpp(134)                                             mongo::CmdEval::run+0x24f
      Fri Nov 09 15:16:16.025 [conn2] mongod.exe    ...\src\mongo\db\dbcommands.cpp(1645)                                        mongo::_execCommand+0x6a
      Fri Nov 09 15:16:16.025 [conn2] mongod.exe    ...\src\mongo\db\dbcommands.cpp(1772)                                        mongo::execCommand+0x967
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    ...\src\mongo\db\dbcommands.cpp(1868)                                        mongo::_runCommands+0x41b
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    ...\src\mongo\db\ops\query.cpp(43)                                           mongo::runCommands+0x46
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    ...\src\mongo\db\ops\query.cpp(940)                                          mongo::runQuery+0x426
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    ...\src\mongo\db\instance.cpp(245)                                           mongo::receivedQuery+0x16d
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    ...\src\mongo\db\instance.cpp(391)                                           mongo::assembleResponse+0x2f7
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    ...\src\mongo\db\db.cpp(197)                                                 mongo::MyMessageHandler::process+0xf5
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    ...\src\mongo\util\net\message_server_port.cpp(86)                           mongo::pms::threadRun+0x5aa
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    ...\src\third_party\boost\libs\thread\src\win32\thread.cpp(180)              boost::`anonymous namespace'::thread_start_function+0x21
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    f:\dd\vctools\crt_bld\self_64_amd64\crt\src\threadex.c(314)                  _callthreadstartex+0x17
      Fri Nov 09 15:16:16.041 [conn2] mongod.exe    f:\dd\vctools\crt_bld\self_64_amd64\crt\src\threadex.c(292)                  _threadstartex+0x7f
      Fri Nov 09 15:16:16.041 [conn2] kernel32.dll                                                                               BaseThreadInitThunk+0xd
      Fri Nov 09 15:16:16.057 [conn2] writing minidump diagnostic file mongo.dmp
      Fri Nov 09 15:16:16.775 [conn2] *** immediate exit due to unhandled exception
      

            Assignee:
            Tad Marshall
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: