SERVER-7605 do not call toString(tryCatch) when tryCatch didn't happen